--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,19 +26,7 @@
 
 
 
-<form>
-  <div class="agregar">
-    <div class="agregar_contenedor">
-      <select class="agregar_tipo">
-        <option value="ing" selected>+</option>
-        <option value="egr">-</option>
-      </select>
-      <input type="text" class="agregar_descripcion" placeholder="Agregar Descripción">
-      <input type="number" class="agregar_valor" placeholder="Valor">
-      <button class="agregar_btn"><i class="ion-ios-checkmark-outline"></i></button>
-    </div>
-  </div>
-</form>
+<app-formulario></app-formulario>
 
 
 <div class="contenedor limpiarEstilos">
