--- a/src/app/ingresos/ingresos.component.html
+++ b/src/app/ingresos/ingresos.component.html
@@ -1,10 +1,7 @@
-
-
-
 <div class="elemento limpiarEstilos">
-  <div class="elemento_descripcion">Salario</div>
+  <div class="elemento_descripcion">{{ingreso.nombre}}</div>
   <div class="right limpiarEstilos">
-    <div class="elemento_valor">+ 2,100.00</div>
+    <div class="elemento_valor">{{ingreso.valor}}</div>
     <div class="elemento_eliminar">
       <button class="elemento_eliminar--btn">
         <i class="ion-ios-close-outline"></i>
@@ -13,12 +10,3 @@
   </div>
 </div>
 
-<div class="elemento limpiarEstilos">
-  <div class="elemento_descripcion">Venta coche</div>
-  <div class="right limpiarEstilos">
-    <div class="elemento_valor">+ 1,500.00</div>
-    <div class="elemento_eliminar">
-      <button class="elemento_eliminar--btn"><i class="ion-ios-close-outline"></i></button>
-    </div>
-  </div>
-</div>
