--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,6 @@
-<div class="cabecero">
-  <div class="presupuesto">
-    <div class="presupuesto_titulo">Presupuesto Disponible:</div>
-
-    <div class="presupuesto_valor">+ 2,345.64</div>
-
-    <div class="presupuesto_ingreso limpiarEstilos">
-      <div class="presupuesto_ingreso--texto">Ingresos</div>
-      <div class="right">
-        <div class="presupuesto_ingreso--valor">+ 4,300.00</div>
-        <div class="presupuesto_ingreso--porcentaje">&nbsp;</div>
-      </div>
-    </div>
-
-    <div class="presupuesto_egreso limpiarEstilos">
-      <div class="presupuesto_egreso--text">Egresos</div>
-      <div class="right limpiarEstilos">
-        <div class="presupuesto_egreso--valor">- 1,954.36</div>
-        <div class="presupuesto_egreso--porcentaje">45%</div>
-      </div>
-    </div>
-  </div>
-</div>
-
+<app-head></app-head>
 
 <app-formulario></app-formulario>
-
-
 
 <div class="contenedor limpiarEstilos">
   <div class="ingreso">
@@ -39,32 +14,12 @@
 
 <div class="egreso">
     <h2 class="egreso_titulo">Egresos</h2>
-
-    <div class="elemento limpiarEstilos">
-      <div class="elemento_descripcion">Renta departamento</div>
-      <div class="right limpiarEstilos">
-        <div class="elemento_valor">- 900.00</div>
-        <div class="elemento_porcentaje">21%</div>
-        <div class="elemento_eliminar">
-          <button class="elemento_eliminar--btn">
-            <i class="ion-ios-close-outline"></i>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="elemento limpiarEstilos">
-      <div class="elemento_descripcion">Ropa</div>
-      <div class="right limpiarEstilos">
-        <div class="elemento_valor">- 435.28</div>
-        <div class="elemento_porcentaje">10%</div>
-        <div class="elemento_eliminar">
-          <button class="elemento_eliminar--btn">
-            <i class="ion-ios-close-outline"></i>
-          </button>
-        </div>
-      </div>
-    </div>
+  <app-egresos
+    *ngFor="let item of egresos; let indice = index"
+    [egresos]="item"
+    [i]="indice"
+    [total]="total"
+  ></app-egresos>
 
   </div>
 </div>
