--- a/src/app/egresos/egresos.component.html
+++ b/src/app/egresos/egresos.component.html
@@ -1,1 +1,12 @@
-<p>egresos works!</p>
+<div class="elemento limpiarEstilos">
+  <div class="elemento_descripcion">{{egresos.nombre}}</div>
+  <div class="right limpiarEstilos">
+    <div class="elemento_valor">{{egresos.valor}}</div>
+    <div class="elemento_porcentaje">{{((egresos.valor/total)*100).toFixed(2)}}</div>
+    <div class="elemento_eliminar">
+      <button class="elemento_eliminar--btn">
+        <i class="ion-ios-close-outline"></i>
+      </button>
+    </div>
+  </div>
+</div>
