--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -2,7 +2,7 @@
   <div class="agregar">
     <div class="agregar_contenedor">
       <select class="agregar_tipo" [(ngModel)]="tipo" [ngModelOptions]="{standalone: true}" >
-        <option  [value]="item" *ngFor="let item of lista">{{item}}</option>
+        <option  *ngFor="let item of lista" [value]="item" >{{item}}</option>
       </select>
       <input type="text" class="agregar_descripcion" placeholder="Agregar Descripción" [(ngModel)]="xdescripcion" [ngModelOptions]="{standalone: true}">
       <input type="number" class="agregar_valor" placeholder="Valor" [(ngModel)]="xvalor" [ngModelOptions]="{standalone: true}">
