Se finaliza la aplicación

--- a/src/app/egresos/egresos.component.html
+++ b/src/app/egresos/egresos.component.html
@@ -4,7 +4,7 @@
     <div class="elemento_valor">{{egresos.valor}}</div>
     <div class="elemento_porcentaje">{{((egresos.valor/total)*100).toFixed(2)}}</div>
     <div class="elemento_eliminar">
-      <button class="elemento_eliminar--btn">
+      <button class="elemento_eliminar--btn" (click)="eliminar(i)">
         <i class="ion-ios-close-outline"></i>
       </button>
     </div>
