--- a/src/app/ingresos/ingresos.component.html
+++ b/src/app/ingresos/ingresos.component.html
@@ -3,7 +3,7 @@
   <div class="right limpiarEstilos">
     <div class="elemento_valor">{{ingreso.valor}}</div>
     <div class="elemento_eliminar">
-      <button class="elemento_eliminar--btn">
+      <button class="elemento_eliminar--btn" (click)="eliminar(i)">
         <i class="ion-ios-close-outline"></i>
       </button>
     </div>
