--- a/src/app/egresos/egresos.component.html
+++ b/src/app/egresos/egresos.component.html
@@ -1,7 +1,7 @@
 <div class="elemento limpiarEstilos">
   <div class="elemento_descripcion">{{egresos.nombre}}</div>
   <div class="right limpiarEstilos">
-    <div class="elemento_valor">{{egresos.valor}}</div>
+    <div class="elemento_valor">{{egresos.valor | currency:"COL":'$':'1.2-2'}}</div>
     <div class="elemento_porcentaje">{{((egresos.valor/total)*100).toFixed(2)}}</div>
     <div class="elemento_eliminar">
       <button class="elemento_eliminar--btn" (click)="eliminar(i)">
